[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suews-mb"
version = "0.1.0"
description = "Modern SUEWS urban climate modelling with meteoblue data integration"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "proprietary" }

dependencies = [
    "supy>=2026.1.28",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "meteoblue-dataset-sdk>=1.2.0",
    "netCDF4>=1.6",
    "pandas>=2.0",
    "numpy>=2.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "watchdog>=6.0.0",
    "streamlit>=1.50.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
plot = ["cartopy>=0.22", "matplotlib>=3.7"]
dev  = ["pytest>=8.0", "ruff>=0.4"]
frontend = [
    "plotly>=6.7.0",
    "streamlit>=1.50.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["suews_mb*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[dependency-groups]
dev = [
    "graphviz>=0.21",
    "ipykernel>=6.31.0",
]
